--- a/envs/atlatl.yml
+++ b/envs/atlatl.yml
@@ -1,21 +1,29 @@
-snakemake>=6.4.1
-biopython>=1.78
-lamassemble
-last>=874
-mafft>=7.487
-minimap2>=2.20
-perl>=5.26.2
-samtools>=1.12
-seqkit>=0.16.1
-seqtk>=1.3
-yaml>=0.2.5
-pysam>=0.16.0.1
-subread
-fastqc
-fastcluster
-edlib
-curl
-attrs
-cattrs
-bedtools
-bcftools
+name: atlatl
+channels:
+  - anaconda
+  - conda-forge
+  - defaults
+  - bioconda
+  - default
+dependencies:
+  - snakemake>=6.4.1
+  - biopython>=1.78
+  - lamassemble
+  - last>=1238
+  - mafft>=7.487
+  - minimap2>=2.20
+  - perl>=5.26.2
+  - samtools>=1.12
+  - seqkit>=0.16.1
+  - seqtk>=1.3
+  - yaml>=0.2.5
+  - pysam>=0.16.0.1
+  - subread
+  - fastqc
+  - fastcluster
+  - edlib
+  - curl
+  - attrs
+  - cattrs
+  - bedtools
+  - bcftools
